Fixed DefibInterface and fixed typos in template and mocked data

--- a/hp-frontend/src/app/defibrilators/defibrilators.component.html
+++ b/hp-frontend/src/app/defibrilators/defibrilators.component.html
@@ -11,5 +11,5 @@
 <div *ngIf="selectedDefib">
   <h2>Details:</h2>
   <div><span><strong>Name: </strong></span>{{selectedDefib.name}}</div>
-  <div><span><strong>Address: </strong> </span>{{selectedDefib.addres}}</div>
+  <div><span><strong>Address: </strong> </span>{{selectedDefib.address}}</div>
 </div>
