--- a/hp-frontend/src/app/defibrilators/defibrilators.component.html
+++ b/hp-frontend/src/app/defibrilators/defibrilators.component.html
@@ -11,5 +11,8 @@
 <div *ngIf="selectedDefib">
   <h2>Details:</h2>
   <div><span><strong>Name: </strong></span>{{selectedDefib.name}}</div>
-  <div><span><strong>Address: </strong> </span>{{selectedDefib.address}}</div>
+  <div><span><strong>Address: </strong></span>{{selectedDefib.address}}</div>
+  <div><span><strong>City: </strong></span>{{selectedDefib.city}}</div>
+  <div><span><strong>Latitude: </strong></span>{{selectedDefib.latitude}}</div>
+  <div><span><strong>Longitude: </strong></span>{{selectedDefib.longitude}}</div>
 </div>
