Frontend - Added two components - map with support for google maps and defib-detail moved from defibrilator parent

--- a/hp-frontend/src/app/app.component.html
+++ b/hp-frontend/src/app/app.component.html
@@ -1,1 +1,7 @@
+<h3>{{title}}</h3>
+<nav>
+  <a routerLink="/defibrilators">Defibrilators AED in Szczecin</a>
+</nav>
+
+
 <app-defibrilators></app-defibrilators>
