--- a/hp-frontend/src/app/defibrilators/defibrilators.component.html
+++ b/hp-frontend/src/app/defibrilators/defibrilators.component.html
@@ -1,13 +1,6 @@
-<h2>Defibrilators AED in Szczecin</h2>
+<app-map [defibrilator]="selectedDefib" [defibrilators_list] = defib_list></app-map>
 
-<div *ngIf="selectedDefib">
-  <h2>Details:</h2>
-  <div><span><strong>Name: </strong></span>{{selectedDefib.name}}</div>
-  <div><span><strong>Address: </strong></span>{{selectedDefib.address}}</div>
-  <div><span><strong>City: </strong></span>{{selectedDefib.city}}</div>
-  <div><span><strong>Latitude: </strong></span>{{selectedDefib.latitude}}</div>
-  <div><span><strong>Longitude: </strong></span>{{selectedDefib.longitude}}</div>
-</div>
+<app-defibrilator-detail [defibrilator]="selectedDefib"></app-defibrilator-detail>
 
 <ul class="defibrilators">
   <li *ngFor="let def of defib_list"
