Refactoring and basic layout added

--- a/hp-frontend/src/app/app.component.html
+++ b/hp-frontend/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h3>{{title}}</h3>
-<nav>
-  <a routerLink="/defibrilators">Defibrilators AED in Szczecin</a>
-</nav>
-
-
-<app-defibrilators></app-defibrilators>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
