--- a/hp-frontend/src/app/defibrilator-detail/defibrilator-detail.component.html
+++ b/hp-frontend/src/app/defibrilator-detail/defibrilator-detail.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="defibrilator">
+<div *ngIf="clicked_defibrilator">
   <h2>Details:</h2>
-  <div><span><strong>Name: </strong></span>{{defibrilator.name}}</div>
-  <div><span><strong>Address: </strong></span>{{defibrilator.address}}</div>
-  <div><span><strong>City: </strong></span>{{defibrilator.city}}</div>
-  <div><span><strong>Latitude: </strong></span>{{defibrilator.latitude}}</div>
-  <div><span><strong>Longitude: </strong></span>{{defibrilator.longitude}}</div>
+  <div><span><strong>Name: </strong></span>{{clicked_defibrilator.name}}</div>
+  <div><span><strong>Address: </strong></span>{{clicked_defibrilator.address}}</div>
+  <div><span><strong>City: </strong></span>{{clicked_defibrilator.city}}</div>
+  <div><span><strong>Latitude: </strong></span>{{clicked_defibrilator.latitude}}</div>
+  <div><span><strong>Longitude: </strong></span>{{clicked_defibrilator.longitude}}</div>
 </div>
