--- a/hp-frontend/src/app/defibrilators/defibrilators.component.css
+++ b/hp-frontend/src/app/defibrilators/defibrilators.component.css
@@ -1,3 +1,21 @@
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+}
+
+/* Control the left side */
+.left {
+  left: 0;
+}
+
+/* Control the right side */
+.right {
+  right: 0;
+}
 
 .defibrilators li:hover {
   cursor: pointer;
