Added header in map template

--- a/hp-frontend/src/app/map/map.component.html
+++ b/hp-frontend/src/app/map/map.component.html
@@ -1,3 +1,4 @@
+<h2 style="text-align: right;">Defibrilators AED in Szczecin</h2>
 <agm-map [zoom]="zoom" [latitude]="latHome" [longitude]="lngHome">
   <div *ngIf="clicked_defibrilator; else elseBlock">
     <agm-marker [latitude]="clicked_defibrilator.latitude" [longitude]="clicked_defibrilator.longitude">
